# ChangeLog for dev-java/jhealpix
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*jhealpix-3.11 (16 Jun 2013)

  16 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> +jhealpix-3.11.ebuild,
  +metadata.xml:
  dev-java/jhealpix: Initial import