@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jhealpix
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  08 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  dev-java/jhealpix: Updating remote-id in metadata.xml
 
 *jhealpix-3.11 (16 Jun 2013)
 
